# from-data-to-intelligence

./: .gitignore  AGENT.md  README.md  mkdocs.yml  pyproject.toml
.agents/skills/: COMPAT.md
.agents/skills/humanize-all/: SKILL.md
.agents/skills/review-and-rewrite-all/: SKILL.md
.agents/skills/review-chapter/: SKILL.md
.agents/skills/rewrite-section/: SKILL.md
.claude/: .gitignore
.github/workflows/: docs.yml
docs/: 00-preface.md  01-数字化转型下的医药数据困局.md  02-从需求到蓝图：一个数据平台的诞生.md  03-技术栈全景与预备知识.md  04-平台五层模型与设计哲学.md  05-端到端数据流全景.md  06-环境与多账号隔离设计.md  07-数据湖分层设计.md  08-数据仓库设计-Redshift.md  09-计算与ETL设计-Glue与Lambda.md  10-编排与调度设计-StepFunctions与EventBridge.md  11-配置与状态管理.md  12-配置驱动的任务模型.md  13-连接器框架总览.md  14-数据库与JDBC连接器.md  15-文件与S3连接器.md  16-API-SaaS与邮件连接器.md  17-Landing到Raw到Enriched开发实战.md  17-Landing到Raw到Redshift开发实战.md  18-数据脱敏与隐私治理.md  19-任务开发配方与实战案例.md  20-元数据管理与数据血缘.md  21-Terraform架构总览.md  22-核心基础设施仓库设计.md  23-业务仓库设计与同构模式.md  24-通用Terraform模块设计.md  25-环境参数与tfvars模型.md  26-StepFunctions模板注入.md  27-CI-CD可复用工作流平台.md  28-四类发布流.md  29-OIDC与凭证治理.md  30-工程师日常工作流与变更场景.md  31-遗留系统迁移-SQLServer到Redshift.md  32-跨账号批量同步-双桶桥接架构.md  33-自研DAG调度器与任务编排.md  34-设计边界与已知取舍的诚实复盘.md  35-衍生业务系统总领.md  36-低代码与云混合-零售数据源门户.md  37-数据即服务-DaaS激活层设计.md  38-时代命题-AI-Ready数据供应.md  (+32 more)
docs/diagrams/: ch47-fail-policy.md  ch47-prompt-fusion.md  ch48-explore-branch.md  ch48-langgraph-main.md
docs/javascripts/: blueprint-icons.js
docs/stylesheets/: figure-caption.css
meta/: blueprint-theme.md  mermaid-catalog.md  table-catalog.md
overrides/partials/: comments.html
(+4 files in other folders)
