[project]
name = "from-data-to-intelligence"
version = "0.0.1"
description = "《从数据到智能》——基于 mkdocs-material 构建的开源技术书籍，发布于 GitHub Pages。"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.11"
authors = [
    { name = "zhiweio" }
]
dependencies = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.7,<10.0",
    "pymdown-extensions>=10.0,<11.0",
]

[tool.uv]
package = false
